# PrivCage

./: .gitignore  PrivCage.spec  README.md  pyproject.toml
config.example/: privcage.example.toml
docs/: user_guide.md
examples/full_test/: README.md
examples/full_test/input/data/: people.csv  record.json  record.xml  record.yaml
examples/full_test/input/docs/: memo.md  note.txt  rich.rtf
examples/full_test/input/office/: brief.pptx  contacts.xlsx  meeting.docx
scripts/: build_exe.ps1  gui_entry.py
src/privcage/: __init__.py  cli.py  config.py  crypto.py  encoding.py  env_status.py  errors.py  gui_app.py  hashing.py  manifest.py  markdown.py  models.py  placeholder.py  processor.py  recognize.py  restore.py
src/privcage/parsers/: __init__.py  legacy_office_parser.py  office_parser.py  pdf_parser.py  registry.py  text_parser.py
tests/: test_cli.py  test_crypto.py  test_pdf_parser.py  test_processor.py
