[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privcage"
version = "0.1.0"
description = "Local reversible privacy redaction for AI workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
office = [
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "python-pptx>=1.0.0",
]
pdf = [
  "PyMuPDF>=1.24.0",
]

[project.scripts]
privcage = "privcage.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
